--- a/src/pages/detailview/detailview.html
+++ b/src/pages/detailview/detailview.html
@@ -64,35 +64,34 @@
               Students
           </ion-item-divider>
           <div class="container">
-
-              <ion-card class="pb-5">
+              <ion-card class="pb-5" *ngFor="let stud of students" >
                   <ion-item>
                       <ion-avatar item-start>
                           <div class="student-pic">
-                              <span>M</span>
+                              <span>{{stud.name[0]}}</span>
                           </div>
                       </ion-avatar>
-                      <h1>Marty McFly</h1>
+                      <h1>{{stud.name}}</h1>
                   </ion-item>
                   <ion-row class="pl-16 st-analysis">
                       <ion-col class="pl-0 flex">
                           <ion-icon name="hand" class="mr-5"></ion-icon>
                           <div class="st-analysis-item">
-                              <div id="attendanceId" class="lb-value">100%</div>
+                              <div id="attendanceId" class="lb-value">{{stud.attendance}}</div>
                               <div class="lb-title">Attendance</div>
                           </div>
                       </ion-col>
                       <ion-col class="pl-0 flex">
                           <ion-icon name="git-merge" class="mr-5"></ion-icon>
                           <div class="st-analysis-item">
-                              <div id="engagementId" class="lb-value">70%</div>
+                              <div id="engagementId" class="lb-value">{{stud.engagement}}</div>
                               <div class="lb-title">Engagement</div>
                           </div>
                       </ion-col>
                       <ion-col class="pl-0 flex">
                           <ion-icon name="flash" class="mr-5"></ion-icon>
                           <div class="st-analysis-item">
-                              <div id="perfomanceId" class="lb-value">80%</div>
+                              <div id="perfomanceId" class="lb-value">{{stud.perfomance}}</div>
                               <div class="lb-title">Perfomance</div>
                           </div>
                       </ion-col>
