#Devcon-0000 feat: added component for popup  alert

--- a/src/pages/teacherdayview/teacherdayview.html
+++ b/src/pages/teacherdayview/teacherdayview.html
@@ -1,13 +1,13 @@
 <ion-header class="bg-primary white">
     <ion-navbar>
-        <ion-title>
-           Time Table
-        </ion-title>
-        <ion-buttons end>
-            <button ion-button icon-only>
-                <ion-icon name="add-circle" end></ion-icon>
-            </button>
-        </ion-buttons>
+      <ion-title>
+        Time Table
+      </ion-title>
+      <!-- <ion-buttons end>
+        <button ion-button icon-only (click)="openQrCodeScanner()" id="qrIcon">
+            <img src="assets/imgs/ic_scanqr.png" class="tool-icon" height="30" width="30" float-end />
+        </button>
+    </ion-buttons> -->
     </ion-navbar>
 </ion-header>
 
