--- a/src/pages/qrscanner/qrscanner.html
+++ b/src/pages/qrscanner/qrscanner.html
@@ -9,6 +9,16 @@
 </ion-header>
 
 
-<ion-content #content padding>
-
+<ion-content #content>
+  <div style="font-weight: bold; font-size: 1.4em; text-align: center; margin-top: 10px;">
+    <h1>Staffroom and Home</h1>
+  </div>
 </ion-content>
+
+<ion-footer *ngIf="!hideButton">
+  <ion-buttons center>
+    <button ion-button block (click)="openQrCodeScanner()" class="footer-button">
+      Click To Scan QR code.
+    </button>
+  </ion-buttons>
+</ion-footer>
