--- a/src/pages/teacherdayview/teacherdayview.html
+++ b/src/pages/teacherdayview/teacherdayview.html
@@ -1,7 +1,7 @@
 <ion-header class="bg-primary white">
     <ion-navbar>
       <ion-title>
-        Time Table
+        Scheduler
       </ion-title>
       <!-- <ion-buttons end>
         <button ion-button icon-only (click)="openQrCodeScanner()" id="qrIcon">
