--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -17,14 +17,14 @@
         <ion-icon name="albums" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
           <div class="lb-title">Class</div>
-          <div id="ClassId" class="lb-value">4</div>
+          <div id="ClassId" class="lb-value">{{periodResponse?.grade}}</div>
         </div>
       </ion-col>
       <ion-col class="flex">
         <ion-icon name="book" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
           <div class="lb-title">Subject</div>
-          <div id="SubjectId" class="lb-value">EVS</div>
+          <div id="SubjectId" class="lb-value">{{periodResponse?.subject}}</div>
         </div>
       </ion-col>
     </ion-row>
