Added appu changes

--- a/src/pages/askappu/askappu.html
+++ b/src/pages/askappu/askappu.html
@@ -16,7 +16,7 @@
             </div>
             <div class="msg-content">
               <span class="triangle"></span>
-              <p class="line-breaker ">Hey Jags, I am Appu your personal assistant !</p>
+              <p class="line-breaker ">Hey {{visitorName}}, I am Appu your personal assistant !</p>
               <div>
               </div>
             </div>
