#devcon-0000 feat: modified UI and backend logics

--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -50,7 +50,7 @@
         <ion-icon name="timer" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
           <div class="lb-title">Date & Time</div>
-          <div class="lb-value" id="SubjectId">23/01/2019 (08:30AM - 09:15AM)</div>
+          <div class="lb-value" id="SubjectId">23-01-2019 (10:00AM - 11:00AM)</div>
         </div>
       </ion-col>
     </ion-row>
