#Devcon-0000 feat: added style and refactored code

--- a/src/pages/studentview/studentview.html
+++ b/src/pages/studentview/studentview.html
@@ -81,10 +81,10 @@
           <div class="ft-16 ft-w400">Engagement</div>
         </ion-col>
         <ion-col>
-          <div class="cl-gray">Math</div>
+          <div class="cl-gray-math"></div>
         </ion-col>
         <ion-col>
-          <div class="cl-gray">Science</div>
+          <div class="cl-gray-science"></div>
         </ion-col>
       </ion-row>
       <ion-row class="text-center">
@@ -92,10 +92,10 @@
           <div class="ft-16 ft-w400">Perfomance</div>
         </ion-col>
         <ion-col>
-          <div class="cl-gray">Math</div>
+          <div class="cl-gray-math"></div>
         </ion-col>
         <ion-col>
-          <div class="cl-gray">Science</div>
+          <div class="cl-gray-science"></div>
         </ion-col>
       </ion-row>
     </div>
