--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -50,7 +50,8 @@
         <ion-icon name="timer" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
           <div class="lb-title">Date & Time</div>
-          <div class="lb-value" id="SubjectId">23-01-2019 (10:00AM - 11:00AM)</div>
+          <div class="lb-value" id="SubjectId" *ngIf="date">23-01-2019 (10:00AM - 11:00AM)</div>
+          <div class="lb-value" id="SubjectId" *ngIf="!date">24-01-2019 (01:00PM - 06:00PM)</div>
         </div>
       </ion-col>
     </ion-row>
