--- a/src/pages/teacherdayview/teacherdayview.html
+++ b/src/pages/teacherdayview/teacherdayview.html
@@ -13,14 +13,14 @@
 
 
 <ion-content>
-<mbsc-form>
+<!-- <mbsc-form> -->
   <div class="mbsc-grid">
       <div class="mbsc-row">
             <div class="mbsc-form-group w-100 m-0">
                     <!-- <div class="mbsc-form-group-title" style="color: black;text-align: center">Jagadish</div> -->
                     <!-- <div class="mbsc-form-group-title">Daily schedule</div> -->
-                    <mbsc-eventcalendar [data]="events" [options]="dailySettings">
-                    </mbsc-eventcalendar>
+                    <!-- <mbsc-eventcalendar [data]="events" [options]="dailySettings">
+                    </mbsc-eventcalendar> -->
                 </div>
           <!-- <div class="mbsc-col-sm-12 mbsc-col-md-4">
               <div class="mbsc-form-group">
@@ -36,7 +36,7 @@
           </div> -->
       </div>
   </div>
-</mbsc-form>
+<!-- </mbsc-form> -->
 </ion-content>
 
 
