--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,3 +1,3 @@
 <ion-content>
-  <mbsc-eventcalendar [data]="events" [options]="eventSettings"></mbsc-eventcalendar>
+  <!-- <mbsc-eventcalendar [data]="events" [options]="eventSettings"></mbsc-eventcalendar> -->
 </ion-content>
