--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -1,7 +1,7 @@
 <ion-header class="bg-primary white">
   <ion-navbar>
     <ion-title>
-      Class 
+      Class
     </ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="openModal()">
@@ -34,7 +34,7 @@
         <ion-icon name="list-box" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
           <div class="lb-title">Topics</div>
-          <div id="TopicsId" class="lb-value" ><span >{{topic}} </span></div>
+          <div id="TopicsId" class="lb-value"><span>{{topic}} </span></div>
         </div>
       </ion-col>
     </ion-row>
@@ -57,8 +57,8 @@
     </ion-row>
   </ion-card>
 
-  <ion-row class="student-stats" *ngIf ='studentStatistics'>
-    <ion-col class="p-0">
+  <ion-row class="student-stats" *ngIf='studentStatistics'>
+    <!-- <ion-col class="p-0">
       <ion-card padding (click)="openAttendenceReport()">
         <div class="st-analysis-item">
           <ion-icon name="hand" class="mr-10 secondary-color"></ion-icon>
@@ -66,8 +66,8 @@
           <div class="lb-title">Attendance</div>
         </div>
       </ion-card>
-    </ion-col>
-    <ion-col class="p-0">
+    </ion-col> -->
+    <!-- <ion-col class="p-0">
       <ion-card padding (click)="openHeatMapForEngagement()">
         <div class="st-analysis-item">
           <ion-icon name="git-merge" class="mr-10 primary-color"></ion-icon>
@@ -75,31 +75,58 @@
           <div class="lb-title">Engagement</div>
         </div>
       </ion-card>
-    </ion-col>
+    </ion-col> -->
     <ion-col class="p-0">
       <ion-card padding>
-        <div class="st-analysis-item" (click)="openHeatMapForPerformance()">
-          <ion-icon name="flash" class="mr-10 tertiary-color"></ion-icon>
-          <div class="lb-value stats py-5" id="PerformanceID">{{avgPerformance}} %</div>
-          <div class="lb-title">Performance</div>
-        </div>
+        <ion-row>
+          <ion-col col-1>
+            <ion-icon name="analytics" class="mr-10 tertiary-color"></ion-icon>
+          </ion-col>
+          <ion-col col-11>
+            <div class="st-analysis-item" (click)="openHeatMapForPerformance()">
+              <div class="lb-value stats py-5" id="PerformanceID">{{avgPerformance}} %</div>
+              <div class="lb-title">Performance</div>
+            </div>
+          </ion-col>
+        </ion-row>
       </ion-card>
     </ion-col>
   </ion-row>
 
-  <ion-row class="browse-diksha-btn" *ngIf ='!studentStatistics'>
+  <ion-row>
     <ion-col>
-      <ion-buttons>
-          <button ion-button full class="wd-85">Browse Sunbird</button>
-          <button ion-button clear class="appu-image" (click)="showAppuPage()">
-            <img src="../../assets/imgs/appu.png" alt="appu image">
-          </button>
-        </ion-buttons>
-        <ion-buttons>
-          <button  *ngIf= 'showStartClass' ion-button full class="wd-85">Start your class</button>
-          
-        </ion-buttons>
+      <ion-card>
+        <ion-card-header>
+          <div (click)="alert(revise)">Revise <ion-icon class="secondary-color "float-end name="play"></ion-icon></div>
+        </ion-card-header>
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-card>
+        <ion-card-header>
+          <div (click)="alert(recall)">Recall <ion-icon class="secondary-color "float-end name="play"></ion-icon></div>
+        </ion-card-header>
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-card>
+        <ion-card-header>
+          <div (click)="alert(practise)">Practice  <ion-icon class="secondary-color"  float-end name="play"></ion-icon></div>
+        </ion-card-header>
+      </ion-card>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      <ion-card>
+        <ion-card-header>
+          <div (click)="alert(quiz)">Start Quiz</div>
+        </ion-card-header>
+      </ion-card>
     </ion-col>
   </ion-row>
 </ion-content>
-
