--- a/www/index.html
+++ b/www/index.html
@@ -30,14 +30,13 @@
     }
   </script>-->
 
-  <link rel="stylesheet" href="lib/mobiscroll/css/mobiscroll.min.css">
   <link href="build/main.css" rel="stylesheet">
 
 </head>
 <body>
 
   <!-- Ionic's root component and where the app will load -->
-  <ion-app></ion-app>
+  <ion-app style="background: none transparent !important;"></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
