#Devcon-demo: Added Heatmap for performance

--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -81,7 +81,7 @@
       <ion-card padding>
         <div class="st-analysis-item" (click)="openHeatMapForPerformance()">
           <ion-icon name="stats" class="mr-10 tertiary-color"></ion-icon>
-          <div class="lb-value stats py-5" id="PerformanceID">70 %</div>
+          <div class="lb-value stats py-5" id="PerformanceID">{{avgPerformance}} %</div>
           <div class="lb-title">Performance</div>
         </div>
       </ion-card>
