--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -12,6 +12,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content>
+  <div class="*ngIf =!playing">
   <ion-card class="summary-card">
     <ion-row class="st-analysis no-border">
       <ion-col class="flex">
@@ -82,7 +83,9 @@
         <div class="st-analysis-item" (click)="openHeatMapForPerformance()">
           <ion-icon name="stats" class="mr-10 tertiary-color"></ion-icon>
           <div class="lb-value stats py-5" id="PerformanceID">{{avgPerformance}} %</div>
-          <div class="lb-title">Performance</div>
+          <div class="lb-title" *ngIf="!activePerformance">Performance</div>
+          <div class="lb-title" style="color:blue" *ngIf="activePerformance">Performance</div>
+
         </div>
       </ion-card>
     </ion-col>
@@ -119,7 +122,7 @@
     <ion-col>
       <ion-card>
         <ion-card-header>
-          <div (click)="alert(quiz)">Start Quiz</div>
+          <div (click)="startQuiz(quiz)">Start Quiz</div>
         </ion-card-header>
       </ion-card>
     </ion-col>
@@ -150,7 +153,7 @@
       </ion-card>
     </ion-col>
     <ion-col size="4" class="col-inside">
-      <ion-card class="btn-card" (click)="alert(quiz)">
+      <ion-card class="btn-card" (click)="startQuiz(quiz)">
         <div class="alignment">
           <ion-icon name="refresh" class="mr-7 primary-color"></ion-icon>
           <div class="lb-title-new"> Start Quiz</div>
@@ -158,4 +161,8 @@
       </ion-card>
     </ion-col>
   </ion-row>
+</div>
+<div *ngIf="playing">
+  <h4 text-center>Playing....</h4>
+</div>
 </ion-content>
