--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -80,7 +80,7 @@
     </ion-col> -->
     <ion-col class="p-0">
       <ion-card padding>
-        <div class="st-analysis-item" (click)="openHeatMapForPerformance()">
+        <div class="st-analysis-item" (click)="openMap()">
           <ion-icon name="stats" class="mr-10 tertiary-color"></ion-icon>
           <div class="lb-value stats py-5" id="PerformanceID">{{avgPerformance}} %</div>
           <div class="lb-title" *ngIf="!activePerformance">Performance</div>
