--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -35,8 +35,8 @@
       <ion-col class="flex">
         <ion-icon name="list-box" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
-          <div class="lb-title">Topics</div>
-          <div id="TopicsId" class="lb-value"><span>{{topic}} </span></div>
+          <div class="lb-title">Description</div>
+          <div id="TopicsId" class="lb-value"><span>{{description}} </span></div>
         </div>
       </ion-col>
     </ion-row>
