--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -19,7 +19,7 @@
         <ion-icon name="albums" class="mr-10"></ion-icon>
         <div class="st-analysis-item">
           <div class="lb-title">Class</div>
-          <div id="ClassId" class="lb-value">{{periodResponse?.grade}}</div>
+          <div id="ClassId" class="lb-value">5</div>
         </div>
       </ion-col>
       <ion-col class="flex">
